feat: 增加控制测试模式和测试模式下单个表情包集下载数量上限的环境变量

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-API_TOKEN=YOUR_TG_BOT_API_TOKEN
+API_TOKEN=YOUR_TG_BOT_API_TOKEN # 替换为你的实际 TG Bot API Token
+DOWNLOAD_DIR=sticker_downloads # 贴纸下载目录
+TEST_MODE=true # 是否启用测试模式
+DOWNLOAD_LIMIT=5 # 测试模式下的图片下载数量上限
